# backend/server.js
@@ -1,6 +1,10 @@
 const express = require('express');
 const swaggerJson = require('./outputSwagger.json');
 const swaggerUi = require('swagger-ui-express');
+const clientes = require('./route/clienteRoute.js');
+const corretor = require('./route/corretorRoute.js');
+const imovel = require('./route/imovelRoute.js');
+const configMod = require('./route/configModRoute.js');
 
 const cors = require('cors');
 
@@ -10,7 +14,10 @@ const porta = "4000";
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerJson));
 app.use(express.json());
 app.use(cors({origin: "http://localhost:3000", credentials:true}));
-
+app.use('/clientes', clientes);
+app.use('/corretor', corretor);
+app.use('/imovel', imovel);
+app.use('/configMod', configMod);
 
 app.listen(porta,()=>{
     console.log(`Servidor rodando em http://localhost:${porta}\n`);
